# GraphRag

./: .gitignore  Makefile  README.md  docker-comopose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/worlflows/: cd.yml  ci.yml
Research Paper/Details of Project/: GraphRAG_Implementation.docx  GraphRAG_Project_Proposal.docx  QWOA_CVRP_Implementation.docx  QWOA_CVRP_Project_Document.docx  ~$OA_CVRP_Implementation.docx  ~$aphRAG_Implementation.docx
backend/: list_routes.py  model_list.txt
backend/app/: config.py  dependencies.py  main.py  middleware.py
backend/app/api/: routes_evaluation.py  routes_graph.py  routes_health.py  routes_indexing.py  routes_query.py
backend/app/core/pipeline/: __init__.py  chunking.py  community_detection.py  extraction.py  gleaning.py  graph_builder.py  pipeline_runner.py  (+1 more)
backend/app/models/: __init__.py  evaluation_models.py  graph_models.py  request_models.py  response_models.py
backend/app/services/: __init__.py  embedding_service.py  faiss_service.py  llm_service.py  openai_service.py  tokenizer_service.py
backend/app/storage/: __init__.py  artifact_store.py  cache_manager.py  graph_store.py  summary_store.py
backend/app/utils/: async_utils.py  logger.py  retry.py  token_utils.py
backend/app/workers/: extraction_worker.py  indexing_worker.py
backend/tests/: conftest.py
backend/tests/integration/: test_evaluation_endpoint.py  test_indexing_endpoint.py  test_query_endpoint.py
backend/tests/unit/: stage1.py  stage2.py  stage4.py  stage5.py  stage6.py  stage7.py  test_chunking.py  test_community_detection.py  test_graph_builder.py  test_graphrag_engine.py  test_vectorrag_engine.py  text_extraction.py  text_gleaning.py
data/evaluation/: evidence_map.json  question.json  questions.json
data/processed/: pipeline_state.json
docs/: api_contract.md  architecture.md  evaluation_results.md
frontend/my-app/: package-lock.json
frontend/my-app/src/: App.jsx  main.jsx
frontend/src/: App.jsx
frontend/src/context/: GraphContext.jsx
frontend/src/hooks/: useEvaluation.js  useGraphData.js  useQuery.js
frontend/src/styles/: global.css
frontend/src/utils/: formatters.js
scripts/: diagnose_extraction.py  prepare_data.py  run_community_detection.py  run_evaluation.py  run_extraction.py  run_indexing.py  run_summarization.py
(+23 files in other folders)
