[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "graphrag-backend"
version = "1.0.0"
description = "GraphRAG vs VectorRAG Global Question Answering System"
requires-python = ">=3.10"

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths       = ["tests"]
asyncio_mode    = "auto"
addopts         = [
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
]
markers = [
    "unit:        Unit tests (no external dependencies)",
    "integration: Integration tests (requires running server)",
    "slow:        Tests that take more than 2 seconds",
]

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length    = 100
target-version = ["py310", "py311", "py312"]
include        = "\\.pyi?$"
extend-exclude = """
/(
    \\.git
  | __pycache__
  | \\.venv
  | htmlcov
)/
"""

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "ANN",  # flake8-annotations
    "ASYNC",# flake8-async
]
ignore = [
    "ANN101",   # missing type annotation for self
    "ANN102",   # missing type annotation for cls
    "S101",     # use of assert (fine in tests)
    "B008",     # do not perform function calls in default arguments (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S", "N"]    # relax rules in tests

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version          = "3.10"
strict                  = true
warn_return_any         = true
warn_unused_configs     = true
ignore_missing_imports  = true
exclude                 = ["tests/", "scripts/"]